--- a/src/data/hsc/h1/globals.yml
+++ b/src/data/hsc/h1/globals.yml
@@ -1803,9 +1803,8 @@ external_globals:
         ```hsc
         (debug_no_frustum_clip [boolean])
         ```
-        If frustum clipping is disabled by setting this to `true`, certain
-        objects and parts of the BSP will be drawn even when behind foreground
-        geometry (use `rasterizer_wireframe 1` to see this).
+        Disables portal-based occlusion culling for objects and parts of the BSP
+        (use `rasterizer_wireframe 1` to see this).
         This isn't about clipping to the whole view frustum but rather _portal diminished frustrums_;
         in addition to the [PVS](~scenario_structure_bsp#potentially-visible-set),
         the game seems to cull objects and the BSP by whether object bounding
@@ -2156,6 +2155,8 @@ external_globals:
         origin, FP models, and some debug overlays will still be based on the
         previously frozen camera location. This command is useful for inspecting
         portal behaviour where the camera cannot directly see.
+    tags:
+      - portals
   - slug: debug_score
     info:
       en: |-
@@ -2235,6 +2236,7 @@ external_globals:
     tags:
       - sound
       - scenario_structure_bsp
+      - portals
     info:
       en: |-
         ```hsc
@@ -3480,6 +3482,8 @@ external_globals:
         Toggles rendering in wireframe mode, which only draws pixels along triangle
         edges rather than filling trangles. This can be useful for troubleshooting
         portals.
+    tags:
+      - portals
   - slug: rasterizer_zbias
     info:
       en: |-
